# Learning-Biology

./: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  Cell.hpp  DNA.cpp  DNA.hpp  Genes.cpp  Genes.hpp  Protein.cpp  Protein.hpp
